--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "messaging",
+  "name": "onemq",
   "version": "0.1.0",
-  "description": "A simple messaging library with no dependencies.",
+  "description": "A simple many-to-many messaging library with no native dependencies.",
   "main": "lib/index.js",
   "scripts": {
     "test": "node test | faucet"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Schoonology/messaging.git"
+    "url": "https://github.com/Schoonology/onemq.git"
   },
   "author": "Michael Schoonmaker <michael.r.schoonmaker@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Schoonology/messaging/issues"
+    "url": "https://github.com/Schoonology/onemq/issues"
   },
-  "homepage": "https://github.com/Schoonology/messaging",
+  "homepage": "https://github.com/Schoonology/onemq",
   "devDependencies": {
     "concat-stream": "~1.4.7",
     "faucet": "0.0.1",
